hphp/test/zend/good/ext/readline/tests/readline_completion_function_001.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded("readline")) die("skip");
}
