hphp/test/zend/bad/ext/zlib/tests/ob_002.php.skipif
<?php
if (!extension_loaded("zlib")) die("skip need ext/zlib");
?>